--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "name": "glsl-noise-template-string",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Use popular noise functions within glsl written in JS/TS Template-Strings",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write \"src/**/*.ts\" ",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/s1gr1d/glsl-noise-template-string"
   },
+  "files": ["lib/**/*"],
   "keywords": [
     "glsl",
     "glsl-noise",
@@ -20,5 +25,11 @@
     "webgl"
   ],
   "author": "Sigrid Huemer",
-  "license": "SEE LICENSE IN LICENSE"
+  "license": "SEE LICENSE IN LICENSE",
+  "devDependencies": {
+    "prettier": "^2.0.5",
+    "tslint": "^6.1.2",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^3.9.6"
+  }
 }
