--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "prepare": "npm run build",
     "prepublishOnly": "npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format"
+    "version": "npm run format",
+    "bumpPatch": "npm version patch",
+    "bumpMinor": "npm version minor",
+    "bumpMajor": "npm version major"
   },
   "repository": {
     "type": "git",
